# California-Election-Viewer

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  TODOS.md  app.py  dev-requirements.txt  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: qa.yml
data/: county_voter_reg_stats.csv  county_voter_reg_stats.json
src/: __init__.py
src/federal/: __init__.py  getchamberinfo.py
src/local/: __init__.py  getbills.py  getrepresentatives.py
src/utils/: __init__.py  apikeys.py  geocode.py
