[tool.poetry]
name = 'ca-election-viewer'
version = '0.1.0'
description = 'An easy-to-use web application that allows anyone to view upcoming and current elections in the state of California- be it Federal, State, or Local elections.'
authors = ['QLabs (Quantalabs)']
readme = 'README.md'
packages = [{include = 'core'}]

[tool.poetry.dependencies]
python = '~3.11.0'
plotly = '~5.14.0'
dash = '~2.6.2'
pandas = '~1.4.3'

[tool.poetry.dev-dependencies]
isort = '~=5.10.1'
pycodestyle = '~=2.9.1'
pep8-naming = '~=0.13.1'
flake8-noqa = '~=1.2.8'
flake8 = '~=5.0.4'
ttws = '~=0.8.3'
autopep8 = '~=2.0.0'

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'