[tool.poetry]
name = 'ca-election-viewer'
version = '0.1.0'
description = 'An easy-to-use web application that allows anyone to view upcoming and current elections in the state of California- be it Federal, State, or Local elections.'
authors = ['QLabs (Quantalabs)']
readme = 'README.md'

[tool.poetry.dependencies]
python = '~3.11.0'
plotly = '~5.17.0'
dash = '~2.13.0'
pandas = '~2.1.1'
requests = '~2.31.0'

[tool.poetry.group.dev.dependencies]
pre-commit = "~3.4.0"
isort = '~=5.12.0'
pycodestyle = '~2.10.0'
pep8-naming = '~0.13.3'
flake8-noqa = '~1.3.2'
flake8 = '~6.0.0'
ttws = '~0.8.5'
autopep8 = '~2.0.4'
black = "~23.10.0"

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.black]
line-length = 79
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 27

